# -Andoroido-MCP

./: .gitignore  AGENTS.md  LICENSE  README.md
docs/: IMPROVEMENTS.md  SPEC.md  TROUBLESHOOTING.md
github/: copilot-instructions.md
github/workflows/: sync-agents.yml
scripts/: setup-hooks.sh
sdk/: settings.gradle.kts
sdk/agent-sdk/: build.gradle.kts
sdk/agent-sdk/src/main/: AndroidManifest.xml
sdk/agent-sdk/src/main/kotlin/com/android/mcp/agent/: AgentService.kt  MessageMasker.kt  NetworkInterceptor.kt  SdkBridgeClient.kt  ViewModelObserver.kt
sdk/demo-app/: gradlew  settings.gradle.kts
sdk/demo-app/app/: build.gradle.kts
sdk/demo-app/app/src/main/: AndroidManifest.xml
sdk/demo-app/app/src/main/java/com/android/mcp/demo/: DemoApplication.kt  MainActivity.kt
sdk/demo-app/app/src/main/res/layout/: activity_main.xml
sdk/demo-app/app/src/main/res/values/: strings.xml  themes.xml
server/: README.md  pyproject.toml
server/android_deep_debugger_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/mcp_server/: __init__.py  device.py  main.py  sdk_bridge.py  session_history.py
server/mcp_server/tools/: __init__.py  build.py  crash.py  fuzz.py  ide.py  network.py  report.py  state.py  system.py  ui.py
server/scripts/: inspect_mode.sh
server/tests/: __init__.py  conftest.py  helpers.py  test_build.py  test_crash.py  test_device_adapter.py  test_e2e_device.py  test_fuzz.py  test_main.py  test_network.py  test_report.py  test_sdk_bridge.py  test_state.py  test_system.py  test_ui.py
tests/: e2e_test.py
