[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android-deep-debugger-mcp-server"
version = "1.0.0"
description = "Universal Android Deep Debugger MCP Server"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Universal Android Deep Debugger Contributors"}
]
keywords = ["mcp", "android", "debugger", "ai-agent", "uiautomator2"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Debuggers",
]
dependencies = [
  "mcp[cli]",
  "pydantic>=2,<3",
  "uiautomator2",
  "pytest",
  "pytest-asyncio",
  "websockets",
]

[project.urls]
Homepage = "https://github.com/HARAmartino/-Andoroido-MCP"
Repository = "https://github.com/HARAmartino/-Andoroido-MCP"
Issues = "https://github.com/HARAmartino/-Andoroido-MCP/issues"

[project.scripts]
android-debugger-mcp = "mcp_server.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Default run excludes real-device tests; use `pytest -m e2e` to include them.
addopts = "-m 'not e2e'"
markers = [
  "e2e: real Android device required (deselected by default)",
]
